--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div> 
                 <div class="box">
                     <h1>Contact</h1>
-                    <img src="images/iron.png" alt="">
+                    <img src="images/home.png" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quo, beatae, corporis</p>
                 </div>
         </div>
