Little Changes in link

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
             <nav>
                     <ul>
-                        <li class="current"><a href="home.html">Home</a>  </li>
-                        <li><a href="home.html">About</a>  </li>
-                        <li><a href="home.html">Services</a>  </li>
+                        <li class="current"><a href="index.html">Home</a>  </li>
+                        <li><a href="index.html">About</a>  </li>
+                        <li><a href="index.html">Services</a>  </li>
                      
                     </ul>
             </nav>
@@ -59,7 +59,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quo, beatae, corporis</p>
                     
                 </div> 
-                <div class="box">
+                <div class="box home">
                     <h1>Contact</h1>
                     <img src="images/home.png" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quo, beatae, corporis</p>
