--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <nav>
                     <ul>
                         <li class="current"><a href="index.html">Home</a>  </li>
-                        <li><a href="https://github.com/amanpreetsingh214">About</a>  </li>
-                        <li><a href="https://github.com/amanpreetsingh214">Services</a>  </li>
+                        <li><a href="index.html">About</a>  </li>
+                        <li><a href="index.html">Services</a>  </li>
                      
                     </ul>
             </nav>
