--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <nav>
                     <ul>
-                        <li class="current"><a href="index.html">Home</a>  </li>
-                        <li><a href="index.html">About</a>  </li>
+                        <li class="current"><a href="https://mailchi.mp/876d53bbd848/iron123">Home</a>  </li>
+                        <li><a href="https://mailchi.mp/876d53bbd848/iron123">About</a>  </li>
                         <li><a href="index.html">Services</a>  </li>
                      
                     </ul>
